<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.recipelist.RecipeFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewRecipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/imageViewErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/empty_list_image_description"
        android:padding="@dimen/error_image_padding"
        android:gravity="center"
        android:src="@drawable/ic_empty_list"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>
</FrameLayout>